--- a/src/post-py/Dockerfile
+++ b/src/post-py/Dockerfile
@@ -3,7 +3,8 @@ FROM python:3.6.0-alpine
 WORKDIR /app
 ADD . /app
 
-RUN apk --no-cache --update add build-base && \
+iRUN apk --no-cache --update add build-base && \
+    pip install --upgrade pip && \
     pip install -r /app/requirements.txt && \
     apk del build-base
 
